Add a Recipe Page to index

--- a/recipes/pesto-pizza.html
+++ b/recipes/pesto-pizza.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/pesto-pizza.html">recipe-page</a>
+    <h1>Pesto Pizza</h1>
 </body>
 </html>
