Recipe Page Content

--- a/recipes/pesto-pizza.html
+++ b/recipes/pesto-pizza.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pesto Pizza</h1>
+    <h1>Pesto Pizza</h1><br>
+    <img src="pizza.jpeg">
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1(12-inch) pre-baked pizza crust</li>
+        <li>1/2 cup pesto</li>
+        <li>1 ripe-tomato</li>
+        <li>1/2 cup bell-pepper</li>
+        <li>1(2 ounce) can chopped black olives</li>
+        <li>1/2 small red onion</li>
+        <li>1 (4 ounce) can artichoke hearts</li>
+        <li>1 cup crumbled feta cheese</li>  
+    </ul><br>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Preheat oven to 450 degrees F</li>
+        <li>Spread pesto on pizza crust. Top with the toppings</li>
+        <li>Bake for 8 to 10 minutes, or until cheese is melted and browned</li>
+    </ol>
 </body>
 </html>
