--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pesto-pizza.html">recipe-page</a>
+    <ul>
+    <li><a href="./recipes/pesto-pizza.html">recipe-page</a></li>
+    </ul>
 </body>
 </html>
