More Recipes to index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="./recipes/pesto-pizza.html">recipe-page</a></li>
+    <li><a href="./recipes/pesto-pizza.html">Pizza</a></li>
+    <li><a href="./recipes/manchuria.html">Manchuria</a></li>
+    <li><a href="./recipes/soup.html">Soup</a></li>
     </ul>
 </body>
 </html>
