recipe images are added alt values

--- a/recipes/pesto-pizza.html
+++ b/recipes/pesto-pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pesto Pizza</h1><br>
-    <img src="pizza.jpeg">
+    <img src="pizza.jpeg" alt="Pesto-Pizza">
     <h3>Ingredients:</h3>
     <ul>
         <li>1(12-inch) pre-baked pizza crust</li>
