--- a/recipes/manchuria.html
+++ b/recipes/manchuria.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Gobi Manchuria</h1>
-    <img src="gobi-manchuria.jpeg">
+    <img src="gobi-manchuria.jpeg" alt="Gobi_Manchuria">
     <h3>Ingredients:</h3>
     <ul>
         <li>Manchurian Sauce</li>
