--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tomato Soup</h1>
-    <img src="tomato-soup.jpeg">
+    <img src="tomato-soup.jpeg" alt="Tomato Cream Soup">
     <h3>Ingredients:</h3>
     <ul>
         <li>2 tablespoon butter</li>
