Link to index page

--- a/recipes/manchuria.html
+++ b/recipes/manchuria.html
@@ -24,6 +24,7 @@
         <li>Add manchuiran sauce inside the mix and also tomato sauce</li>
         <li>Fry the cauliflower flourets</li>
         <li>Garnish with green onions and serve</li>
-    </ol>
+    </ol><br>
+    <a href="../index.html">Home</a>
 </body>
 </html>
