--- a/recipes/pesto-pizza.html
+++ b/recipes/pesto-pizza.html
@@ -25,6 +25,7 @@
         <li>Preheat oven to 450 degrees F</li>
         <li>Spread pesto on pizza crust. Top with the toppings</li>
         <li>Bake for 8 to 10 minutes, or until cheese is melted and browned</li>
-    </ol>
+    </ol><br>
+    <a href="../index.html">Home</a>
 </body>
 </html>
