--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -25,6 +25,7 @@
         <li>Medium heat the oven and saute onions in butter until translucent.</li>
         <li>Stir the flour so that no lumps remain, whisk tomato juice</li>
         <li>Add salt to taste, Let cool 10 minutes then slowly stir in milk</li>
-    </ol>
+    </ol><br>
+    <a href="../index.html">Home</a>
 </body>
 </html>
